@@ -7,5 +7,6 @@ libQFgib 1 quakeforge-common (>= 0.5.4)
 libQFimage 1 quakeforge-common (>= 0.5.4)
 libQFjs 1 quakeforge-common (>= 0.5.4)
 libQFmodels 1 quakeforge-common (>= 0.5.4)
+libQFobject 1 quakeforge-common (>= 0.5.4)
 libQFsound 1 quakeforge-common (>= 0.5.4)
 libQFutil 1 quakeforge-common (>= 0.5.4)
