@@ -1,3 +1,9 @@
+quakeforge (0.5.5-0cvs20040727) frozen unstable; urgency=low
+
+  * CVS snapshot.
+
+ -- Jeff Teunissen <deek@d2dc.net>  Tue, 27 Apr 2004 19:39:37 -0400
+
 quakeforge (0.5.4-2) frozen unstable; urgency=high
 
   * compile against libvorbis0a instead of libvorbis0 (oops)
